--- a/samTemplate.yaml
+++ b/samTemplate.yaml
@@ -11,7 +11,7 @@ Resources:
       Description: 'Lambda function for CD Demo'
       MemorySize: 128
       Timeout: 30
-      Role: 'arn:aws:iam::054005128925:role/MyLambdaRole'
+      Role: 'arn:aws:iam::054005128925:role/Cloudformation-serviceRole'
       Events:
         getAZsAPI:
           Type: Api
